hard-gists/2379572/run.log
=== Docker Run Log for 2379572 ===
Started at: Mi 29. Okt 13:03:16 CET 2025

[2025-10-29 13:03:17] START: Running container for 2379572
[2025-10-29 13:03:17] SUCCESS: Container 4dca31c22286151b7a3a91aae667ccf5e2114ba22bd28f9a2f3d494d03a00413 started for 2379572
=== Container logs for 2379572 ===
  File "/snippet.py", line 34
    print path
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2379572 ===
[2025-10-29 13:03:19] INFO: Container 4dca31c22286151b7a3a91aae667ccf5e2114ba22bd28f9a2f3d494d03a00413 has stopped
